--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <div class="tetris-container">
         <canvas id="tetris" width="300" height="600"></canvas>
+        <div id="score-container">
+            Score: <span id="score">0</span>
+        </div>
     </div>
     <script src="tetris.js"></script>
 </body>
