--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
         <div id="score-container">
             Score: <span id="score">0</span>
         </div>
+        <button id="start-button">Start Game</button>
+        <div id="controls">
+            <h3>Controls</h3>
+            <p>Move Left: Left Arrow</p>
+            <p>Move Right: Right Arrow</p>
+            <p>Move Down: Down Arrow</p>
+            <p>Rotate Left: Q</p>
+            <p>Rotate Right: W</p>
+        </div>
     </div>
     <script src="tetris.js"></script>
 </body>
