--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div id="score-container">
             Score: <span id="score">0</span>
         </div>
-        <button id="start-button">Start Game</button>
         <div id="controls">
             <h3>Controls</h3>
+            <p>Start Game: Q Key</p>
             <p>Move Left: Left Arrow</p>
             <p>Move Right: Right Arrow</p>
             <p>Move Down: Down Arrow</p>
