--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </div>
         <div class="tetris-container">
             <canvas id="tetris" width="300" height="600"></canvas>
+            <div id="game-over" style="display: none;">GAME OVER<br>Score: <span id="final-score"></span></div>
         </div>
         <div class="sidebar">
             <div id="score-container">
