--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <div id="illustration-container"></div>
+            <div id="illustration-container">
+                <img id="illustration" src="gall/gall01.jpg" alt="Illustration">
+            </div>
         </div>
         <div class="tetris-container">
-            <canvas id="tetris" width="300" height="600"></canvas>
+            <canvas id="tetris" width="270" height="540"></canvas>
             <div id="game-over" style="display: none;">GAME OVER<br>Score: <span id="final-score"></span></div>
         </div>
         <div class="sidebar">
