--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tetris</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="tetris.css">
 </head>
 <body>
     <div class="container">
@@ -32,6 +32,7 @@
             </div>
         </div>
     </div>
+    <audio id="bgm" src="bgm.mp3" loop></audio>
     <script src="tetris.js"></script>
 </body>
 </html>
