--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,13 +13,16 @@
                 <img id="illustration" src="gall/gall01.jpg" alt="Illustration">
             </div>
             <div id="controls">
-                <h3>Controls</h3>
-                <p>Start Game: Q Key</p>
-                <p>Move Left: Left Arrow</p>
-                <p>Move Right: Right Arrow</p>
-                <p>Move Down: Down Arrow</p>
-                <p>Rotate Left: Q</p>
-                <p>Rotate Right: W</p>
+                <h3>コントロール</h3>
+                <p>ゲーム開始: Q キー</p>
+                <p>左に移動: 左矢印</p>
+                <p>右に移動: 右矢印</p>
+                <p>下に移動: 下矢印</p>
+                <p>左回転: Q</p>
+                <p>右回転: W</p>
+            </div>
+            <div id="next-block">
+                <canvas id="next-block-canvas" width="100" height="100"></canvas>
             </div>
         </div>
         <div class="tetris-container">
