--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
             <div id="illustration-container">
                 <img id="illustration" src="gall/gall01.jpg" alt="Illustration">
             </div>
+        </div>
+        <div class="tetris-container">
+            <canvas id="tetris" width="400" height="800"></canvas>
+            <div id="game-over" style="display: none;">GAME OVER<br>Score: <span id="final-score"></span></div>
+        </div>
+        <div class="sidebar">
+            <div id="score-container">
+                Score: <span id="score">0</span>
+            </div>
             <div id="next-block">
                 <canvas id="next-block-canvas" width="100" height="100"></canvas>
             </div>
@@ -25,17 +34,8 @@
                 <p>右回転: W</p>
             </div>
         </div>
-        <div class="tetris-container">
-            <canvas id="tetris" width="400" height="800"></canvas>
-            <div id="game-over" style="display: none;">GAME OVER<br>Score: <span id="final-score"></span></div>
-        </div>
-        <div class="sidebar">
-            <div id="score-container">
-                Score: <span id="score">0</span>
-            </div>
-        </div>
     </div>
-    <audio id="bgm" src="bgm.mp3" loop></audio>
+    <audio id="bgm" src="./bgm/bgm.mp3" loop></audio>
     <script src="tetris.js"></script>
 </body>
 </html>
