--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
             <div id="score-container">
                 Score: <span id="score">0</span>
             </div>
-            <div id="next-block">
-                <canvas id="next-block-canvas" width="100" height="100"></canvas>
-            </div>
             <div id="controls">
                 <h3>コントロール</h3>
                 <p>ゲーム開始: Q キー</p>
@@ -35,7 +32,7 @@
             </div>
         </div>
     </div>
-    <audio id="bgm" src="./bgm/bgm.mp3" loop></audio>
+    <audio id="bgm" src="bgm/bgm.mp3" loop></audio>
     <script src="tetris.js"></script>
 </body>
 </html>
