--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 </head>
 <body>
     <div class="container">
+        <div class="left-sidebar">
+            <div class="illustration-container">
+                <img id="illustration" src="gall/gall01.jpg" alt="Illustration">
+            </div>
+        </div>
         <div class="tetris-container">
             <canvas id="tetris" width="400" height="800"></canvas>
             <div id="game-over" style="display: none;">GAME OVER<br>Score: <span id="final-score"></span></div>
         </div>
-        <div class="sidebar">
+        <div class="right-sidebar">
             <div class="score-container">
                 <h3>スコア</h3>
                 <p>Score: <span id="score">0</span></p>
