--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
             <div class="illustration-container">
                 <img id="illustration" src="gall/gall01.jpg" alt="Illustration">
             </div>
+            <div class="extra-space"></div>
         </div>
         <div class="tetris-container">
-            <canvas id="tetris" width="400" height="800"></canvas>
+            <canvas id="tetris" width="400" height="400"></canvas>
             <div id="game-over" style="display: none;">GAME OVER<br>Score: <span id="final-score"></span></div>
         </div>
         <div class="right-sidebar">
