--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="left-sidebar">
             <div class="illustration-container">
-                <img id="illustration" src="gall01.jpg" alt="Illustration">
+                <img id="illustration" src="gall/gall01.jpg" alt="Illustration">
             </div>
         </div>
         <div class="tetris-container">
@@ -43,7 +43,7 @@
             </div>
         </div>
     </div>
-    <audio id="bgm" src="bgm.mp3" loop></audio>
+    <audio id="bgm" src="bgm/bgm.mp3" loop></audio>
     <script src="tetris.js"></script>
 </body>
 </html>
